# Socket_logistics_management_system

client/: CMakeLists.txt  LICENSE
client/data/: historyList  manPasswd  packageList  userList
client/data/pkgDir/P0/: P0
client/data/usrDir/recv/: recv
client/data/usrDir/send/: send
client/src/: ClientSocket.cpp  ClientSocket.h  Console.cpp  Console.h  Courier.cpp  CourierMenu.cpp  History.cpp  History.h  Manager.cpp  ManagerMenu.cpp  Menu.cpp  Menu.h  Package.h  ServerSocket.cpp  ServerSocket.h  User.cpp  User.h  UserMenu.cpp  Utils.h  Warehouse.h  WarehouseCourier.cpp  WarehouseManager.cpp  WarehouseUser.cpp  main.cpp
server/: CMakeLists.txt  logistics_management_system
server/data/: courierList
server/data/couDir/courier/: courier
server/data/hisDir/H5760000000/: H5760000000
server/src/: ClientSocket.cpp  ClientSocket.h  Console.cpp  Console.h  Courier.cpp  CourierMenu.cpp  History.cpp  History.h  ManagerMenu.cpp  Menu.cpp  Menu.h  Package.cpp  Package.h  ServerSocket.cpp  ServerSocket.h  UserMenu.cpp  Utils.cpp  Utils.h  Warehouse.cpp  Warehouse.h  WarehouseCourier.cpp  WarehouseManager.cpp  WarehouseUser.cpp  main.cpp
